Fix tiny layout bug on /index

--- a/css/initial.css
+++ b/css/initial.css
@@ -2288,7 +2288,7 @@ body.page-index #markdownBody #notable {
             margin-left: 22ch;
         }
         body.page-index #markdownBody hr {
-            margin-left: -5ch;
+            margin-left: -8ch;
         }
 	    body.page-404 div#new-popular-notable hr {
             margin-left: -9.5ch;
